Add JavaScript logic and a few more UI buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="calc-container">
         <div id="display">
-
+            <p></p>
         </div>
         <div class="calc-row">
             <button class="number">1</button>
@@ -32,9 +32,13 @@
         </div>
         <div class="calc-row">
             <button class="number">0</button>
-            <button class="operator">=</button>
+            <button id="decimal-dot" class="number">.</button>
             <button id="divide-sign" class="operator">&div;</button>
             <button class="operator">&Cross;</button>
+        </div>
+        <div class="calc-row">
+            <button id="back-button" class="operator">&crarr;</button>
+            <button class="operator">=</button>
         </div>
     </div>
 </body>
