Limit the display size to 21 digits wide
Limit the display size to 21 digits wide and change the
error message so it can fit.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button class="operator">&Cross;</button>
         </div>
         <div class="calc-row">
-            <button id="back-button" class="operator">&crarr;</button>
+            <button class="operator">&crarr;</button>
             <button class="operator">=</button>
         </div>
     </div>
